# CVSCommon

./: .clang-format  CMakeLists.txt  LICENSE  README.md
.github/workflows/: clang-format.yml
cmake/: CVSBuildNumber.cmake  CVSCommon.cmake  CVSGitHelpers.cmake  CVSInstall.cmake
cmake/templates/: version.hpp.in
common/: CMakeLists.txt
common/include/cvs/common/: config.hpp  constexprString.hpp  factory.hpp  general.hpp  staticFactory.hpp
common/install/: CVSCommonConfig.cmake.in
common/src/: config.cpp  general.cpp
include/cvs/common/: config.hpp  configbase.hpp  configutils.hpp  constexprString.hpp  factory.hpp  general.hpp  staticfactory.hpp
install/: CVSCommonCMakeHelpersConfig.cmake.in  CVSCommonConfig.cmake.in
logger/: CMakeLists.txt
logger/include/cvs/logger/: argumentPreprocessor.hpp  loggable.hpp  loggerTypes.hpp  logging.hpp  opencvHelper.hpp
logger/include/cvs/logger/tools/: fpsCounter.hpp  fpsLogger.hpp
logger/install/: CVSLoggerConfig.cmake.in  CVSLoggerOpenCVConfig.cmake.in
logger/src/: logging.cpp  opencvHelper.cpp
logger/src/tools/: fpsCounter.cpp  fpsLogger.cpp
src/: config.cpp  configbase.cpp
test/: CMakeLists.txt  configtest.cpp  deprecated.cpp
test/common_test/: CMakeLists.txt  config_test.cpp
test/general_test/: CMakeLists.txt  general_test.cpp
test/logger_test/: CMakeLists.txt  factory_test.cpp  main.cpp  opencv_cfg_test.cpp  opencv_test.cpp
